--- a/styles/app.css
+++ b/styles/app.css
@@ -2,7 +2,6 @@
   --primary-color: #6c63ff;
   --secondary-color: #f5f2fe;
   --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
-  --bs-primary: #6c61f6;
 }
 
 body {
@@ -33,56 +32,26 @@ p {
   text-align: center;
 }
 
-.navigation-links {
-  display: flex;
-  margin-top: 40px;
-  justify-content: center;
-  flex-wrap: wrap;
+.hero {
+  background: var(--secondary-color);
+  text-align: center;
+  padding: 120px 20px;
 }
 
-.navigation-links a {
-  margin: 10px;
-  border-radius: 4px;
-  padding: 10px 15px;
-  text-decoration: none;
-  text-transform: capitalize;
-}
-
-.contact-link {
+.btn-branding {
   background: var(--primary-color);
-  box-shadow: var(--box-shadow);
+  border-radius: 4px;
   color: white;
+  font-size: 18px;
+  padding: 12px 24px;
+  text-decoration: none;
 }
 
-.about-link {
+.btn-branding-outline {
   color: var(--primary-color);
   border: 1px solid var(--primary-color);
-}
-
-.homepage-link {
-  color: var(--primary-color);
-  text-align: center;
-  display: block;
-}
-
-.about-paragraphs {
-  display: flex;
-  flex-direction: column;
-  margin: 30px 0;
-}
-
-.about-paragraphs p {
-  margin: 10px;
-}
-
-.email-link {
-  display: flex;
-  justify-content: center;
-  color: var(--primary-color);
-  font-size: clamp(1rem, 3vw, 1.5rem);
+  border-radius: 4px;
+  font-size: 18px;
+  padding: 12px 24px;
   text-decoration: none;
-}
-
-.email-link:hover {
-  text-decoration: underline;
 }
